# django_optimaze

celery_l/: pyproject.toml
celery_l/optimaze/: .gitignore  manage.py
celery_l/optimaze/mailsender/: forms.py  urls.py  views.py
celery_l/optimaze/mailsender/static/css/: style.css
celery_l/optimaze/mailsender/templates/mailsender/: base.html  email.html
celery_l/optimaze/mailsender/templates/mailsender/answer/: success.html
celery_l/optimaze/optimaze/: asgi.py  settings.py  urls.py  wsgi.py
